--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="container">
+        <div id="displayRow"></div>
+        <div id="row1"></div>
+        <div id="row2"> </div>
+        <div id="row3"></div>
+        <div id="row4"></div>
+        <div id="row5"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
